# Handwriting-keyboard-for-Linux-tesseract

./: .gitmodules  LICENSE  README.md  handwriting.canvas.js  index.html  keyboard.html  main.js  package-lock.json  package.json  preload.js  tsconfig.json  vite.config.ts
src/: handwriting.canvas.js  index.ts  main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: desktop.json  migrated.json
src-tauri/python/: run_paddle_ocr.py
src-tauri/src/: main.rs  ocr.rs  sendinput.rs
