[package]
name = "handwriting-keyboard"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "window-set-position", "window-set-size", "shell-execute", "clipboard-write-text"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21.5"
image = "0.24.7"
tempfile = "3"
rusty-tesseract = "1.1.9"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
