[package]
name = "handwriting-keyboard-t"
version = "2.1.1"
description = "A Tauri App, Handwriting keyboard for linux using OCR engine."
authors = ["Iskander Sultanov"]
license = "MIT"
repository = "https://github.com/BigIskander/Handwriting-keyboard-for-Linux-tesseract"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.5.1", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21.5"
tauri-plugin-clipboard-manager = "2"
image = "0.25.5"
gif = "=0.13.1"
regex = "1.11.1"
gtk = "0.18.2"
tauri-build = "2.2.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-cli = "2"
